--- a/roles/dev-rust/tasks/main.yml
+++ b/roles/dev-rust/tasks/main.yml
@@ -3,13 +3,15 @@
   become: true   
   become_method: sudo   
   xbps:     
-        name:       
-                - cargo
-		- rust
-                - rust-doc
-                - rustup
-		- rustfmt
-        state: present
+    name:       
+      - cargo
+      - rust
+      - rust-doc
+      - rustup
+      - rustfmt
+    state: present
+
+- name: Rust component installation  
   shell: rustup update
   shell: rustup component add rls-preview rust-analysis rust-src
   shell: cargo install rls
