--- a/roles/dev-python/tasks/main.yml
+++ b/roles/dev-python/tasks/main.yml
@@ -3,13 +3,15 @@
   become: true   
   become_method: sudo   
   xbps:            
-        - python3
-        - python3-setuptools
-        - python3-flake8
-        - python3-pip
-	- python3-devel
-        state: present
+    name:
+      - python3
+      - python3-setuptools
+      - python3-flake8
+      - python3-pip
+      - python3-devel
+    state: present
 
+- name: Python component installation
   pip:
     executable: pip2
     name: python-language-server[all]
