--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 
 - name: Generate SSH key
-  shell: ssh-keygen -t rsa -b 4096 -C "{{ email }} -q 
+  shell: ssh-keygen -t rsa -b 4096 -C "{{ email }}" -q -f /root/.ssh/id_rsa 
 
