--- a/roles/terminal/tasks/main.yml
+++ b/roles/terminal/tasks/main.yml
@@ -6,5 +6,10 @@
       - rxvt-unicode
       - urxvt-perls
 
+
+
 - name: Install Alacritty
-  shell: "cargo install exa alacritty"
+  xbps:
+    name:
+      - exa
+      - alacritty
