--- a/roles/media-server/defaults/main.yml
+++ b/roles/media-server/defaults/main.yml
@@ -1,7 +1,34 @@
 ---
 
-tz: "America/Toronto"
+tz: "UTC"
 gid: 140
 uid: 1000
 user-name: mainuser
 storage-root: "/mnt/storage" 
+
+sonarr: 
+  port: 8989
+
+radarr: 
+  port: 7878
+
+lidarr: 
+  port: 8989
+
+ffmpeg:
+  location: /usr/bin/ffmpeg
+
+ffprobe:
+  location: /usr/bin/ffprobe
+
+deluge:
+  port: 58846
+
+plex:
+  port: 32400
+
+ombi:
+  port: 3579
+
+tautulli:
+  port: 8181
