--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -25,16 +25,16 @@
     state: latest 
 
 - name: Docker-py installation (python2)
-  #become: true   
-  #become_method: sudo
+  become: true   
+  become_method: sudo
   pip:
     executable: pip2
     umask: "0755"
     name: docker-py 
 
 - name: Docker-py installation (python3)
-  #become: true   
-  #become_method: sudo
+  become: true   
+  become_method: sudo
   pip:
     executable: pip3
     umask: "0755"
