--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -26,7 +26,7 @@
 
 - name: Docker-py installation (python2)
   become: true   
-  become_method: sudo
+  #become_method: sudo
   pip:
     executable: pip2
     umask: "0755"
@@ -34,7 +34,7 @@
 
 - name: Docker-py installation (python3)
   become: true   
-  become_method: sudo
+  #become_method: sudo
   pip:
     executable: pip3
     umask: "0755"
