--- a/roles/media-server/defaults/main.yml
+++ b/roles/media-server/defaults/main.yml
@@ -4,7 +4,8 @@ tz: "UTC"
 gid: 140
 uid: 1000
 user-name: mainuser
-storage-root: "/mnt/storage" 
+storage:
+  root: "/mnt/storage" 
 
 sonarr: 
   port: "8989"
