--- a/roles/media-server/tasks/main.yml
+++ b/roles/media-server/tasks/main.yml
@@ -69,12 +69,12 @@
     name: gevent
     state: present
 
-#- name: Create autoProcess.ini
+#- name: Create autoProcess
 #  template:
 #    src: autoProcess.ini.j2
 #    dest: ~/Git/sickbeard_mp4_automator/autoProcess.ini
 
-- name: Create docker-compose.yml
+- name: Create docker-compose
   template:
     src: docker-compose.yml.j2
-    dest: " {{ storage-root }}/docker/docker-compose.yml"
+    dest: " {{ storage.root }}/docker/docker-compose.yml"
