--- a/roles/media-server/tasks/main.yml
+++ b/roles/media-server/tasks/main.yml
@@ -76,5 +76,5 @@
 
 - name: Create docker-compose
   template:
-    src: docker-compose.yml.j2
+    src: "docker-compose.yml.j2"
     dest: " {{ storage.root }}/docker/docker-compose.yml"
