--- a/roles/media-server/tasks/main.yml
+++ b/roles/media-server/tasks/main.yml
@@ -72,7 +72,8 @@
     state: present
 
 - name: Create docker directory
-  file: " {{ storage.root }}/docker/"
+  file: 
+  path: " {{ storage.root }}/docker/"
   state: directory
   mode: 0755
 
