--- a/roles/media-server/defaults/main.yml
+++ b/roles/media-server/defaults/main.yml
@@ -9,26 +9,18 @@ storage:
 
 sonarr_port: "8989"
 
-radarr: 
-  - port: "7878"
+radarr_port: "7878"
 
-lidarr: 
-  port: "8989"
+lidarr_port: "8989"
 
-ffmpeg:
-  location: /usr/bin/ffmpeg
+ffmpeg_location: /usr/bin/ffmpeg
 
-ffprobe:
-  location: /usr/bin/ffprobe
+ffprobe_location: /usr/bin/ffprobe
 
-deluge:
-  port: "58846"
+deluge_port: "58846"
 
-plex:
-  port: "32400"
+plex_port: "32400"
 
-ombi:
-  port: "3579"
+ombi_port: "3579"
 
-tautulli:
-  port: "8181"
+tautulli_port: "8181"
