--- a/roles/steam/tasks/main.yml
+++ b/roles/steam/tasks/main.yml
@@ -7,8 +7,10 @@
     pkg:
       - flatpak
   state: present
+  register: result
 
 - name: Install Flathub repo
+  when: result|success
   shell: "flatpak --user remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo"
 
   # https://flathub.org/repo/flathub.flatpakrepo
