--- a/roles/mergerfs/tasks/main.yml
+++ b/roles/mergerfs/tasks/main.yml
@@ -19,20 +19,22 @@
 
 
 - name: Add drive mount directories
-  file: path=/mnt/data"{{ item }}" 
+  file: 
+    path: "/mnt/data{{ item }}" 
     state: directory
   with_items: "{{ devices }}"
 
 - name: Add storage directory
-  file: path=/mnt/storage 
+  file: 
+    path: /mnt/storage 
     state: directory
 
 - name: Add fstab mount disk entries
   become: true
   become_method: sudo
   mount:
-    name: /mnt/data"{{ item }}"
-    src: /dev/sd"{{ item }}"
+    name: "/mnt/data{{ item }}"
+    src: "/dev/sd{{ item }}"
     opts: defaults,allow_other,use_ino,errors=remount-ro
     fstype: ext4
     state: mounted
@@ -43,7 +45,7 @@
   become_method: sudo
   mount:
     name: /mnt/storage
-    src: /mnt/data"{{ item }}"
+    src: "/mnt/data{{ item }}"
     opts: defaults,allow_other,use_ino,hard_remove
     fstype: fuse.mergerfs
     state: mounted
