--- a/roles/media-server/tasks/main.yml
+++ b/roles/media-server/tasks/main.yml
@@ -105,6 +105,6 @@
 - name: Create Traefik traefik.toml
   become: true
   become_method: sudo
-  file:
-    path: /opt/traefik/traefik.toml
-    state: touch
+  template:
+    src: "traefik.toml.j2"
+    dest: "/opt/traefik/traefik.toml"
