--- a/roles/mergerfs/tasks/main.yml
+++ b/roles/mergerfs/tasks/main.yml
@@ -49,8 +49,8 @@
   become_method: sudo
   mount:
     name: /mnt/storage
-    src: "/mnt/data{{ item }}"
+    src: "/mnt/data*"
     opts: defaults,allow_other,use_ino,hard_remove
     fstype: fuse.mergerfs
     state: mounted
-  with_items: "{{ devices }}"
+  #with_items: "{{ devices }}"
