--- a/roles/mergerfs/tasks/main.yml
+++ b/roles/mergerfs/tasks/main.yml
@@ -49,7 +49,7 @@
 
 - name: Add fstab storage entry
   become: true
-  become_method: sudo'
+  become_method: sudo
   mount:
     name: /mnt/storage
     src: "/mnt/data*"
