--- a/roles/mergerfs/tasks/main.yml
+++ b/roles/mergerfs/tasks/main.yml
@@ -8,12 +8,32 @@
       - fuse
   state: present
 
-- name: Create a ext4 filesystem on /dev/sd"{{ item }}"
+- name: Remove all partitions from /dev/sd"{{ item.dev }}"
+  become: true
+  become_method: sudo
+  parted:
+    device: /dev/sd"{{ item.dev }}"
+    number: "{{ item.info.num }}"
+    state: absent
+  with_items:
+   - "{{ info: sdb_info.partitions, dev: devices}}"
+
+
+- name: Create a new primary partition on "/dev/sd{{ item }}"
+  become: true
+  become_method: sudo
+  parted:
+    device: "/dev/sd{{ item }}"
+    number: 1
+    state: present
+  with_items: "{{ devices }}"
+
+- name: Create a ext4 filesystem on /dev/sd"{{ item }}1"
   become: true
   become_method: sudo
   filesystem:
     fstype: ext4
-    dev: "/dev/sd{{ item }}"
+    dev: "/dev/sd{{ item }}1"
     opts: -cc
   with_items: "{{ devices }}"
 
