--- a/roles/mergerfs/tasks/main.yml
+++ b/roles/mergerfs/tasks/main.yml
@@ -12,11 +12,11 @@
   become: true
   become_method: sudo
   parted:
-    device: /dev/sd"{{ item.dev }}"
+    device: "/dev/sd{{ item.dev }}"
     number: "{{ item.info.num }}"
     state: absent
   with_items:
-   - "{{ info: 'sdb_info.partitions', dev: 'devices'}}"
+   - "{{ info: 'sdb_info.partitions', dev: 'devices' }}"
 
 
 - name: Create a new primary partition on "/dev/sd{{ item }}"
