--- a/roles/mergerfs/tasks/main.yml
+++ b/roles/mergerfs/tasks/main.yml
@@ -31,8 +31,7 @@
     number: "{{ item.info.num }}"
     state: absent
   with_items:
-   - { info: '"{{ sdb_info.partitions }}"', dev: '"{{ devices }}"' }
-
+   - { info: '"{{ info.partitions }}"', dev: '"{{ devices }}"' }
 
 - name: Create a new primary partition on "/dev/sd{{ item }}"
   become: true
